--- a/about.html
+++ b/about.html
@@ -38,25 +38,24 @@
 
 	<div class="container">
 
-	<div class="row firstRow">
+	<div class="row">
     <div class="col-md-2"></div>
 		<div class="col-md-8">
       <img id="self" src="images/myface.jpg" alt="Shen's face">
-      <h2>Hi. I'm Shen.</h2>
-      <p>A soon-to-be graudate, I am a student at <a href="http://www.simmons.edu" target="_blank" title="Simmons College">Simmons College</a>,
-        located in Boston, Massachusetts. I
-        hail from China, which means I am well-versed in the Chinese language and culture.
-				But this also means that I am <em>very</em> picky
-        with Chinese foods in the United States.
-      </p>
-      <p>
-				A self-professed <a href="portfolio/typeface.html" title="Typeface design">type lover</a>, I have a sharp eye
-				for typography and enjoy
-				tackling design problems especially in the field of UX/UI design&mdash;which is something I have been learning
-				more and more about. I'm making a big move to the west coast after graduation in May and there I hope to find a career
-				that will combine my passions.
+			<p id="hi">Hi, I'm Shen.</p>
+      <p>Emerging professional in graphic design and front-end web development, I am a self-professed generalist with a wide range of interests.
+				I have a sharp eye for typography, and enjoy tackling design problems especially in the field of UX/UI design&mdash;something
+				I have an intuitive understanding of.
 			</p>
-      <p>Feel free to <a href="contact.html">say hi</a>!
+			<p>
+				One of my many interests is <a href="portfolio/typeface.html" title="Typeface design">type design</a>. I have always been fascinated
+				with the different "feelings" typefaces can convey, ever since I was a toddler living in China. I am constantly mesmerized by fonts
+				I come across, whether they be Chinese- or Latin-alphabet-based.
+			</p>
+      <p>
+				Currently, I am living in the San Francisco Bay Area and open to opportunities to collaborate! Feel free to <a href="contact.html">say hi</a>!
+			</p>
+
 		</div>
 		<div class="col-md-2"></div>
 	</div>
