--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
     <div class="col-md-5 thumb">
 			<a href="portfolio/vagina_monologues.html" title="Vagina Monologues Branding">
 				<figure>
-					<span class="overlay">Vagina Monologues Branding</span>
+					<span class="overlay">Vagina Monologues</span>
 		      <img src="images/thumbs/vagina_thumb.jpg" class="img-responsive" alt="vagina monologues poster">
 				</figure>
 			</a>
@@ -124,7 +124,7 @@
 	<div class="row">
     <div class="col-md-2"></div>
 
-		<div class="col-md-8 thumb">
+		<div class="col-md-3 thumb">
 			<a href="portfolio/norch.html" title="SharkHack Flyer">
 				<figure>
 					<span class="overlay">NORCH Logo</span>
@@ -133,8 +133,32 @@
 			</a>
 		</div>
 
+		<div class="col-md-5 thumb">
+			<a href="portfolio/commtracks.html" title="CommTracks Magazine">
+				<figure>
+					<span class="overlay">CommTracks Magazine</span>
+					<img src="images/thumbs/commtracks.jpg" class="img-responsive" alt="CommTracks Magazine">
+				</figure>
+			</a>
+		</div>
+
     <div class="col-md-2"></div>
   </div>
+
+	<div class="row">
+		<div class="col-md-2"></div>
+
+		<div class="col-md-8 thumb">
+			<a href="portfolio/polychat.html" title="mobile app">
+				<figure>
+					<span class="overlay">PolyChat Mobile App</span>
+					<img src="images/thumbs/mobile_app.jpg" class="img-responsive" alt="mobile app">
+				</figure>
+			</a>
+		</div>
+
+		<div class="col-md-2"></div>
+	</div>
 
 
 	<!-- WEB STUFF -->
