--- a/portfolio/commtracks.html
+++ b/portfolio/commtracks.html
@@ -9,7 +9,7 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<title>Vagina Monologues</title>
+	<title>PolyChat Mobile App</title>
 	<link rel="stylesheet" type="text/css" href="../css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../css/portfolio.css">
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
@@ -25,14 +25,14 @@
 
 		<nav>
 			<div class="container-fluid">
-			<ul>
-				<li class="sliding-middle"><a href="../about.html">about</a></li>
-				<li class="sliding-middle"><a href="../portfolio.html">portfolio</a></li>
-				<li><a href="../index.html"><img id="logo" src="../images/logo.png" alt="logo"></a></li>
-				<li class="sliding-middle"><a href="../docs/Gao_Resume.pdf">resume</a></li>
-				<li class="sliding-middle"><a href="../contact.html">contact</a></li>
-			</ul>
-		</div>
+  			<ul>
+  				<li class="sliding-middle"><a href="../about.html">about</a></li>
+  				<li class="sliding-middle"><a href="../portfolio.html">portfolio</a></li>
+  				<li><a href="../index.html"><img id="logo" src="../images/logo.png" alt="logo"></a></li>
+  				<li class="sliding-middle"><a href="../docs/Gao_Resume.pdf">resume</a></li>
+  				<li class="sliding-middle"><a href="../contact.html">contact</a></li>
+  			</ul>
+		  </div>
 		</nav>
 
 	</header>
@@ -41,41 +41,29 @@
     <div class="row firstRow">
       <div class="col-md-3"></div>
       <div class="col-md-6 description">
-        <h3>Vagina Monologues Branding</h3>
-        <p>Branding for the Vagina Monologues play at Simmons College.
-        <br>Includes 4 event flyers, program brochure, tickets, and a Snapchat filter.
+        <h3>CommTracks Magazine</h3>
+        <p>
+          Every year, the Communications Department at Simmons College publishes a magazine created by a team of seniors. This year, I worked on the team
+          as Graphic Designer and Editor alongside 3 other peers. They are: <a href="http://claireiemar.com/" target="_blank" title="Mariclare Rethore">Mariclare Rethore</a>,
+          Creative Director; Julie Nickerson, Editorial Director; and Laura Campbell, Editor.
         </p>
+        <p>
+          Take a look and flip through the pages below!
+        </p>
+
       </div>
       <div class="col-md-3"></div>
     </div>
 
   <div class="row lastRow">
-    <div class="col-md-1"></div>
+    <div class="col-md-2"></div>
 
-    <div class="col-md-10">
-		    <img src="../images/vagina_branding.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_poster1.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_poster2.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_geofilter.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet1.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet2.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet3.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet4.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet5.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet6.jpg" class="img-responsive" alt="vagina monologues branding">
+    <div class="col-md-8">
+      <div data-configid="28499826/49574977" style="width:100%; height:643px;" class="issuuembed"></div>
+      <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
     </div>
 
-		<div class="col-md-1"></div>
-	</div>
-
-  <div class="row lastRow">
-    <div class="col-md-1"></div>
-
-    <div class="col-md-10 credit">
-      <p>Photos by Emma D'Arpino, Jasmine Perez, and Meghan Bedard</p>
-    </div>
-
-    <div class="col-md-1"></div>
+    <div class="col-md-2"></div>
   </div>
 
 
