--- a/portfolio/polychat.html
+++ b/portfolio/polychat.html
@@ -9,7 +9,7 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-	<title>Vagina Monologues</title>
+	<title>PolyChat Mobile App</title>
 	<link rel="stylesheet" type="text/css" href="../css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../css/portfolio.css">
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
@@ -25,14 +25,14 @@
 
 		<nav>
 			<div class="container-fluid">
-			<ul>
-				<li class="sliding-middle"><a href="../about.html">about</a></li>
-				<li class="sliding-middle"><a href="../portfolio.html">portfolio</a></li>
-				<li><a href="../index.html"><img id="logo" src="../images/logo.png" alt="logo"></a></li>
-				<li class="sliding-middle"><a href="../docs/Gao_Resume.pdf">resume</a></li>
-				<li class="sliding-middle"><a href="../contact.html">contact</a></li>
-			</ul>
-		</div>
+  			<ul>
+  				<li class="sliding-middle"><a href="../about.html">about</a></li>
+  				<li class="sliding-middle"><a href="../portfolio.html">portfolio</a></li>
+  				<li><a href="../index.html"><img id="logo" src="../images/logo.png" alt="logo"></a></li>
+  				<li class="sliding-middle"><a href="../docs/Gao_Resume.pdf">resume</a></li>
+  				<li class="sliding-middle"><a href="../contact.html">contact</a></li>
+  			</ul>
+		  </div>
 		</nav>
 
 	</header>
@@ -41,10 +41,20 @@
     <div class="row firstRow">
       <div class="col-md-3"></div>
       <div class="col-md-6 description">
-        <h3>Vagina Monologues Branding</h3>
-        <p>Branding for the Vagina Monologues play at Simmons College.
-        <br>Includes 4 event flyers, program brochure, tickets, and a Snapchat filter.
+        <h3>PolyChat Mobile App</h3>
+        <p>
+          App idea created based on a <a href="https://devpost.com/software/cardano-s-voice" title="PolyChat" target="_blank">
+          Hackathon project</a> I worked on, PolyChat allows for multilingual communication between people who don't speak the same language.
+          The idea originated from my experience of living in cities that had predominantly immigrant populations where English was a second
+          language for many people. To help foster communication, this app will allow users to chat in different languages in communities like these.
+          A user can chat with a friend in the language s/he chooses, and the friend will
+          be able to view the messages in the language that they prefer to use.
         </p>
+				<p>Below are initial and final user flow, initial sketches, and final prototype.
+				<br>
+          <a href="https://projects.invisionapp.com/share/64BMY447Z#/screens" target="_blank" title="PolyChat prototype">Try it on Invision</a>.
+        </p>
+
       </div>
       <div class="col-md-3"></div>
     </div>
@@ -53,26 +63,13 @@
     <div class="col-md-1"></div>
 
     <div class="col-md-10">
-		    <img src="../images/vagina_branding.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_poster1.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_poster2.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_geofilter.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet1.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet2.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet3.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet4.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet5.jpg" class="img-responsive" alt="vagina monologues branding">
-        <img src="../images/vagina_booklet6.jpg" class="img-responsive" alt="vagina monologues branding">
-    </div>
-
-		<div class="col-md-1"></div>
-	</div>
-
-  <div class="row lastRow">
-    <div class="col-md-1"></div>
-
-    <div class="col-md-10 credit">
-      <p>Photos by Emma D'Arpino, Jasmine Perez, and Meghan Bedard</p>
+				<img src="../images/poly_sketch1.jpg" class="img-responsive" alt="PolyChat app">
+				<img src="../images/poly_sketch2.jpg" class="img-responsive" alt="PolyChat app">
+				<img src="../images/poly_sketch3.jpg" class="img-responsive" alt="PolyChat app">
+        <img src="../images/polychat1.jpg" class="img-responsive" alt="PolyChat app">
+        <img src="../images/polychat2.jpg" class="img-responsive" alt="PolyChat app">
+        <img src="../images/polychat3.jpg" class="img-responsive" alt="PolyChat app">
+        <img src="../images/polychat4.jpg" class="img-responsive" alt="PolyChat app">
     </div>
 
     <div class="col-md-1"></div>
