--- a/portfolio/typeface.html
+++ b/portfolio/typeface.html
@@ -44,8 +44,8 @@
         <h3>Type Design Project</h3>
         <p>
           In order to explore my fascination with typography and typefaces,
-        <br>I spent one semester designing a typeface (along with attending 4 other classes), bringing to
-        <br>life an idea I've had for a long time. <a href="https://glyphsapp.com/glyphs-mini" target="_blank" title="Glyphs Mini Software">Glyphs Mini</a> was the software I used.
+        I spent one semester designing a typeface (along with attending 4 other classes), bringing to
+        life an idea I've had for a long time. <a href="https://glyphsapp.com/glyphs-mini" target="_blank" title="Glyphs Mini Software">Glyphs Mini</a> was the software I used.
         </p>
         <p>
           Special thanks to
