--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 
 	</header>
 
-	<div class="container">
+	<div class="container"><!--======== BEGIN PORTFOLIO PIECES==================-->
 
     <div class="row firstRow">
       <div class="col-md-2"></div>
@@ -48,17 +48,57 @@
     </div>
 
 
-  <div class="row">
+		<div class="row"><!--================POLYCHAT MOBILE APP CONCEPT==================-->
+			<div class="col-md-2"></div>
+
+			<div class="col-md-8 thumb">
+				<a href="portfolio/polychat.html" title="mobile app">
+					<figure>
+						<span class="overlay">PolyChat Mobile App</span>
+						<img src="images/thumbs/mobile_app.jpg" class="img-responsive" alt="mobile app">
+					</figure>
+				</a>
+			</div>
+
+			<div class="col-md-2"></div>
+		</div><!--===================END POLYCHAT MOBILE APP CONCEPT========================-->
+
+		<div class="row"><!--=============NORCH LOGO AND COMMTRACKS MAGAZINE=============-->
+			<div class="col-md-2"></div>
+
+			<div class="col-md-3 thumb">
+				<a href="portfolio/norch.html" title="NORCH Logo">
+					<figure>
+						<span class="overlay">NORCH Logo</span>
+						<img src="images/thumbs/norch.jpg" class="img-responsive" alt="NORCH Logo">
+					</figure>
+				</a>
+			</div>
+
+			<div class="col-md-5 thumb">
+				<a href="portfolio/commtracks.html" title="CommTracks Magazine">
+					<figure>
+						<span class="overlay">CommTracks Magazine</span>
+						<img src="images/thumbs/commtracks.jpg" class="img-responsive" alt="CommTracks Magazine">
+					</figure>
+				</a>
+			</div>
+
+			<div class="col-md-2"></div>
+		</div><!--====================END NORCH LOGO AND COMMTRACKS MAGAZINE==============-->
+
+
+  <div class="row"><!--============ROW WITH DESIGN REV MAG AND TYPEFACE===========-->
     <div class="col-md-2"></div>
 
-    <div class="col-md-5 thumb">
-			<a href="portfolio/vagina_monologues.html" title="Vagina Monologues Branding">
+		<div class="col-md-5 thumb">
+			<a href="portfolio/design_review.html" title="Design Review Magazine">
 				<figure>
-					<span class="overlay">Vagina Monologues</span>
-		      <img src="images/thumbs/vagina_thumb.jpg" class="img-responsive" alt="vagina monologues poster">
+					<span class="overlay">Design Review Magazine</span>
+					<img src="images/thumbs/DesignReview1.jpg" class="img-responsive" alt="Design Review Magazine">
 				</figure>
 			</a>
-    </div>
+		</div>
 
     <div class="col-md-3 thumb">
 			<a href="portfolio/typeface.html" title="Type Design Project">
@@ -70,13 +110,13 @@
     </div>
 
 		<div class="col-md-2"></div>
-	</div>
+	</div><!--===========END ROW DESIGN REV MAG AND TYPEFACE============-->
 
-	<div class="row">
+	<div class="row"><!--==============ROW WITH TYPEWRITER POSTER AND VAGINA MONOLOGUES============-->
 		<div class="col-md-2"></div>
 
 		<div class="col-md-3 thumb">
-			<a href="portfolio/type_poster.html" title="Type Poster">
+			<a href="portfolio/type_poster.html" title="Courier Type Poster">
 				<figure>
 					<span class="overlay">Type Poster</span>
 					<img src="images/thumbs/courier_poster.jpg" class="img-responsive" alt="Courier Type Poster">
@@ -85,18 +125,18 @@
 		</div>
 
 		<div class="col-md-5 thumb">
-			<a href="portfolio/design_review.html" title="Design Review Magazine">
+			<a href="portfolio/vagina_monologues.html" title="Vagina Monologues Branding">
 				<figure>
-					<span class="overlay">Design Review Magazine</span>
-					<img src="images/thumbs/DesignReview1.jpg" class="img-responsive" alt="Design Review Magazine">
+					<span class="overlay">Vagina Monologues</span>
+		      <img src="images/thumbs/vagina_thumb.jpg" class="img-responsive" alt="vagina monologues poster">
 				</figure>
 			</a>
-		</div>
+    </div>
 
 		<div class="col-md-2"></div>
-	</div>
+	</div><!--======END ROW W TYPEWRITER POSTER AND VAGINA MONOLOGUES===========-->
 
-  <div class="row">
+  <div class="row"><!--=========ROW WITH TYPE BOOK AND SHARKHACK FLYER=========-->
     <div class="col-md-2"></div>
 
     <div class="col-md-5 thumb">
@@ -118,50 +158,10 @@
 		</div>
 
     <div class="col-md-2"></div>
-  </div>
+  </div><!--========END ROW WITH TYPE BOOK AND SHARKHACK FLYER===============-->
 
 
-	<div class="row">
-    <div class="col-md-2"></div>
-
-		<div class="col-md-3 thumb">
-			<a href="portfolio/norch.html" title="SharkHack Flyer">
-				<figure>
-					<span class="overlay">NORCH Logo</span>
-					<img src="images/thumbs/norch.jpg" class="img-responsive" alt="NORCH Logo">
-				</figure>
-			</a>
-		</div>
-
-		<div class="col-md-5 thumb">
-			<a href="portfolio/commtracks.html" title="CommTracks Magazine">
-				<figure>
-					<span class="overlay">CommTracks Magazine</span>
-					<img src="images/thumbs/commtracks.jpg" class="img-responsive" alt="CommTracks Magazine">
-				</figure>
-			</a>
-		</div>
-
-    <div class="col-md-2"></div>
-  </div>
-
-	<div class="row">
-		<div class="col-md-2"></div>
-
-		<div class="col-md-8 thumb">
-			<a href="portfolio/polychat.html" title="mobile app">
-				<figure>
-					<span class="overlay">PolyChat Mobile App</span>
-					<img src="images/thumbs/mobile_app.jpg" class="img-responsive" alt="mobile app">
-				</figure>
-			</a>
-		</div>
-
-		<div class="col-md-2"></div>
-	</div>
-
-
-	<!-- WEB STUFF -->
+	<!--========================= WEB STUFF =============================-->
 
 	<div class="row firstRow">
 		<div class="col-md-2"></div>
@@ -220,10 +220,10 @@
 	</div>
 
 
+</div><!--================ END PORTFOLIO PIECES =========================-->
 
 
 
-</div>
 <footer class="footer">
   <br>
   <p class="footer_copy"><a href="https://www.linkedin.com/in/shengao95" target="_blank"><i class="fa fa-linkedin"></i></a>&nbsp;
